--- a/.github/workflows/weekly-report.yml
+++ b/.github/workflows/weekly-report.yml
@@ -24,24 +24,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
-    - name: Create .env file from secrets
-      run: |
-        cat <<EOF >> .env
-        SENDER_EMAIL="${{ secrets.SENDER_EMAIL }}"
-        RECIPIENT_EMAIL="${{ secrets.RECIPIENT_EMAIL }}"
-        EMAIL_PASSWORD="${{ secrets.EMAIL_PASSWORD }}"
-        NCBI_EMAIL="${{ secrets.NCBI_EMAIL }}"
-        PUBMED_TERM="${{ secrets.PUBMED_TERM }}"
-        CLINICALTRIALS_INTERVENTION="${{ secrets.CLINICALTRIALS_INTERVENTION }}"
-        CLINICALTRIALS_CONDITION="${{ secrets.CLINICALTRIALS_CONDITION }}"
-        SEMANTIC_SEARCH_TERMS="${{ secrets.SEMANTIC_SEARCH_TERMS }}"
-        MAX_RECORDS=50
-        DAYS_BACK=7
-        SEMANTIC_THRESHOLD=0.5
-        EOF
-        
+   
     - name: Run Python script
+      env:
+        SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+        RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+        EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+        NCBI_EMAIL: ${{ secrets.NCBI_EMAIL }}
+        PUBMED_TERM: ${{ secrets.PUBMED_TERM }}
+        CLINICALTRIALS_INTERVENTION: ${{ secrets.CLINICALTRIALS_INTERVENTION }}
+        CLINICALTRIALS_CONDITION: ${{ secrets.CLINICALTRIALS_CONDITION }}
+        SEMANTIC_SEARCH_TERMS: ${{ secrets.SEMANTIC_SEARCH_TERMS }}
       run: python neurocell_agent_semantic.py
       
     - name: Upload Report Artifacts
