--- a/.github/workflows/weekly-report.yml
+++ b/.github/workflows/weekly-report.yml
@@ -35,6 +35,9 @@ jobs:
         CLINICALTRIALS_INTERVENTION: ${{ secrets.CLINICALTRIALS_INTERVENTION }}
         CLINICALTRIALS_CONDITION: ${{ secrets.CLINICALTRIALS_CONDITION }}
         SEMANTIC_SEARCH_TERMS: ${{ secrets.SEMANTIC_SEARCH_TERMS }}
+        MAX_RECORDS: 50
+         DAYS_BACK: 7
+         SEMANTIC_THRESHOLD: 0.5
       run: python neurocell_agent_semantic.py
       
     - name: Upload Report Artifacts
