--- a/.github/workflows/Weekly-Semantic-Report.yml
+++ b/.github/workflows/Weekly-Semantic-Report.yml
@@ -5,7 +5,7 @@ on:
     # Runs at 9:00 AM UTC on Monday every week
     - cron: '0 9 * * 1'
   workflow_dispatch:
-    # This line enables the manual "Run workflow" button in the GitHub UI
+    # Enables manual trigger in GitHub UI
 
 jobs:
   run_agent:
@@ -33,15 +33,15 @@ jobs:
         echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env
         echo "NCBI_EMAIL=${{ secrets.NCBI_EMAIL }}" >> .env
         echo "PUBMED_TERM=${{ secrets.PUBMED_TERM }}" >> .env
-        echo "CLINICALTRIALS_INTERVENTION=${{ secrets.CLINICALTRIALS_INTERVENTION }}" >> .env
-        echo "CLINICALTRIALS_CONDITION=${{ secrets.CLINICALTRIALS_CONDITION }}" >> .env
+        echo "CLINICALTRIALS_INTERVENTION=exosomes" >> .env
+        echo "CLINICALTRIALS_CONDITION=CNS" >> .env
         echo "SEMANTIC_SEARCH_TERMS=${{ secrets.SEMANTIC_SEARCH_TERMS }}" >> .env
         echo "MAX_RECORDS=50" >> .env
         echo "DAYS_BACK=7" >> .env
         echo "SEMANTIC_THRESHOLD=0.5" >> .env
         
     - name: Run Python script
-       run: python neurocell_agent_semantic_fixed.py
+      run: python neurocell_agent_semantic_fixed.py
       
     - name: Upload Report Artifacts
       uses: actions/upload-artifact@v4
