--- a/.github/workflows/Weekly-Semantic-Report.yml
+++ b/.github/workflows/Weekly-Semantic-Report.yml
@@ -33,8 +33,8 @@ jobs:
         echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env
         echo "NCBI_EMAIL=${{ secrets.NCBI_EMAIL }}" >> .env
         echo "PUBMED_TERM=${{ secrets.PUBMED_TERM }}" >> .env
-        echo "CLINICALTRIALS_INTERVENTION=exosomes" >> .env
-        echo "CLINICALTRIALS_CONDITION=neurological" >> .env
+        echo "CLINICALTRIALS_INTERVENTION=exosomes OR extracellular vesicles" >> .env
+        echo "CLINICALTRIALS_CONDITION=CNS OR central nervous system OR brain OR spinal" >> .env
         echo "SEMANTIC_SEARCH_TERMS=${{ secrets.SEMANTIC_SEARCH_TERMS }}" >> .env
         echo "MAX_RECORDS=50" >> .env
         echo "DAYS_BACK=7" >> .env
