--- a/.github/workflows/Monthly_Run.yml
+++ b/.github/workflows/Monthly_Run.yml
@@ -39,7 +39,16 @@ jobs:
           python industry_deals_agent.py > neurocell_agent.log 2>&1
           echo "Run completed."
 
+      # 👇 ADD THIS STEP — it prints the Python log content to the Actions console
+      - name: 🔍 Show Python log output
+        if: always()
+        run: |
+          echo "----- Start of neurocell_agent.log -----"
+          cat neurocell_agent.log || echo "Log file not found."
+          echo "----- End of neurocell_agent.log -----"
+
       - name: 📜 Upload log file
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: monthly-run-logs
