--- a/.github/workflows/Monthly_Run.yml
+++ b/.github/workflows/Monthly_Run.yml
@@ -1,5 +1,4 @@
 name: Monthly Intelligence Agent
-
 on:
   schedule:
     # Runs on the 1st day of every month at 08:00 UTC
@@ -9,7 +8,6 @@ on:
 jobs:
   run-monthly-agent:
     runs-on: ubuntu-latest
-
     env:
       EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
       SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
@@ -18,35 +16,34 @@ jobs:
       CLINICALTRIALS_CONDITION: ${{ secrets.CLINICALTRIALS_CONDITION }}
       SEMANTIC_SEARCH_TERMS: ${{ secrets.SEMANTIC_SEARCH_TERMS }}
       # Add more env vars here if you add new secrets later
-
+    
     steps:
       - name: 🧩 Checkout repository
         uses: actions/checkout@v4
-
+      
       - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-
+      
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_semantic.txt
-
+          pip install -r requirements.txt
+      
       - name: 🚀 Run Monthly Intelligence Agent
         run: |
           echo "Starting monthly run for neurocell intelligence..."
           python industry_deals_agent.py > neurocell_agent.log 2>&1
           echo "Run completed."
-
-      # 👇 ADD THIS STEP — it prints the Python log content to the Actions console
+      
       - name: 🔍 Show Python log output
         if: always()
         run: |
           echo "----- Start of neurocell_agent.log -----"
           cat neurocell_agent.log || echo "Log file not found."
           echo "----- End of neurocell_agent.log -----"
-
+      
       - name: 📜 Upload log file
         if: always()
         uses: actions/upload-artifact@v4
