--- a/.env_semantic
+++ b/.env_semantic
@@ -23,5 +23,5 @@ RATE_LIMIT_DELAY=0.5
 
 # Semantic search configuration
 SEMANTIC_THRESHOLD=0.20
-SEMANTIC_SEARCH_TERMS=exosomes nervous system, extracellular vesicles neural, exosomes CNS, neural regeneration exosomes, neurological therapy extracellular vesicles, exosomes brain injury
+SEMANTIC_SEARCH_TERMS=exosomes nervous system, extracellular vesicles neural, exosomes CNS, neural regeneration exosomes, neurological therapy extracellular vesicles, exosomes brain injury, exosomes siRNA, extracellular vesicles mesenchymal stem cells, exosomes loading, exosomes blood brain barrier
 
