--- a/.github/workflows/Weekly-Semantic-Report.yml
+++ b/.github/workflows/Weekly-Semantic-Report.yml
@@ -2,7 +2,7 @@ name: Weekly Semantic Report
 
 on:
   schedule:
-    # Runs at 16:00 AM UTC on Wednesday every week
+    # Runs at 16:00 UTC on Wednesday every week
     - cron: '0 16 * * 3'
   workflow_dispatch:
     # Enables manual trigger in GitHub UI
@@ -10,7 +10,6 @@ on:
 jobs:
   run_agent:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -19,7 +18,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -33,17 +32,17 @@ jobs:
         echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env
         echo "NCBI_EMAIL=${{ secrets.NCBI_EMAIL }}" >> .env
         echo "PUBMED_TERM=${{ secrets.PUBMED_TERM }}" >> .env
-        echo "CLINICALTRIALS_INTERVENTION=exosomes OR extracellular vesicles" >> .env
-        echo "CLINICALTRIALS_CONDITION=CNS OR central nervous system OR brain OR spinal" >> .env
+        echo "CLINICALTRIALS_INTERVENTION=${{ secrets.CLINICALTRIALS_INTERVENTION }}" >> .env
+        echo "CLINICALTRIALS_CONDITION=${{ secrets.CLINICALTRIALS_CONDITION }}" >> .env
         echo "SEMANTIC_SEARCH_TERMS=${{ secrets.SEMANTIC_SEARCH_TERMS }}" >> .env
         echo "MAX_RECORDS=50" >> .env
         echo "DAYS_BACK_PUBMED=7" >> .env
         echo "DAYS_BACK_TRIALS=14" >> .env
-        echo "SEMANTIC_THRESHOLD=0.29" >> .env
-        echo "SEMANTIC_THRESHOLD_TRIALS=0.35" >> .env
+        echo "SEMANTIC_THRESHOLD_PUBMED=0.45" >> .env
+        echo "SEMANTIC_THRESHOLD_TRIALS=0.45" >> .env
         
     - name: Run Python script
-      run: python neurocell_agent_semantic_fixed.py
+      run: python neurocell_agent_semantic_improved.py
       
     - name: Upload Report Artifacts
       uses: actions/upload-artifact@v4
@@ -53,3 +52,4 @@ jobs:
           *.csv
           *.db
           neurocell_agent_semantic.log
+        retention-days: 90
