Add yfinance and matplotlib to requirements
Added yfinance and matplotlib for stock monitoring.

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,10 @@ spacy
 sentence-transformers
 scikit-learn
 
+# Stock monitoring
+yfinance
+matplotlib
+
 # Already included
 biopython
 faiss-cpu
