--- a/.github/workflows/stock_monitor.yml
+++ b/.github/workflows/stock_monitor.yml
@@ -1,55 +1,39 @@
-name: Weekly Semantic Report
+name: Daily Nurexone Stock Monitor
 
 on:
   schedule:
-    # Runs at 16:00 UTC on Wednesday every week
-    - cron: '0 16 * * 3'
+    # Runs every day at 15:00 UTC
+    - cron: '0 15 * * *'
   workflow_dispatch:
-    # Enables manual trigger in GitHub UI
 
 jobs:
-  run_agent:
+  monitor_stock:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - uses: actions/checkout@v4
+    
+    - uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
-    - name: Create .env file for secrets
+
+    - name: Create .env file
       run: |
         touch .env
-        echo "SENDER_EMAIL=${{ secrets.SENDER_EMAIL }}" >> .env
-        echo "RECIPIENT_EMAIL=${{ secrets.RECIPIENT_EMAIL }}" >> .env
+        echo "EMAIL_USER=${{ secrets.EMAIL_USER }}" >> .env
         echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env
-        echo "NCBI_EMAIL=${{ secrets.NCBI_EMAIL }}" >> .env
-        echo "PUBMED_TERM=${{ secrets.PUBMED_TERM }}" >> .env
-        echo "CLINICALTRIALS_INTERVENTION=${{ secrets.CLINICALTRIALS_INTERVENTION }}" >> .env
-        echo "CLINICALTRIALS_CONDITION=${{ secrets.CLINICALTRIALS_CONDITION }}" >> .env
-        echo "SEMANTIC_SEARCH_TERMS=${{ secrets.SEMANTIC_SEARCH_TERMS }}" >> .env
-        echo "MAX_RECORDS=50" >> .env
-        echo "DAYS_BACK_PUBMED=7" >> .env
-        echo "DAYS_BACK_TRIALS=14" >> .env
-        echo "SEMANTIC_THRESHOLD_PUBMED=0.45" >> .env
-        echo "SEMANTIC_THRESHOLD_TRIALS=0.30" >> .env
-        
-    - name: Run Python script
-      run: python neurocell_agent_semantic_improved.py
-      
-    - name: Upload Report Artifacts
+        echo "EMAIL_RECIPIENT=${{ secrets.EMAIL_RECIPIENT }}" >> .env
+
+    - name: Run stock monitor script
+      run: python NRX_Stock_Report.py
+
+    - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: neurocell-reports-${{ github.run_id }}
+        name: stock-reports-${{ github.run_id }}
         path: |
-          *.csv
-          *.db
-          neurocell_agent_semantic.log
-        retention-days: 90
+          *.png
