--- a/.github/workflows/patent_search.yml
+++ b/.github/workflows/patent_search.yml
@@ -1,28 +1,25 @@
 name: Patent Search and Update
 
 on:
-  # Run automatically every 2 months exactly (on the 1st day at 00:00 UTC)
   schedule:
     - cron: '0 0 1 */2 *'  # Every 2 months on the 1st at midnight UTC
-  # Allow manual triggering
   workflow_dispatch:
 
 jobs:
   search-patents:
     runs-on: ubuntu-latest
-    
     permissions:
-      contents: write  # Needed to commit and push changes
-    
+      contents: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -30,26 +27,25 @@ jobs:
 
       - name: List repo files for debugging
         run: ls -R
-      
+
       - name: Run patent search
         env:
           EPO_OPS_KEY: ${{ secrets.EPO_OPS_KEY }}
           EPO_OPS_SECRET: ${{ secrets.EPO_OPS_SECRET }}
-        run: |
-          python scripts/Patents-Bimonthly.py
-      
+        run: python scripts/Patents-Bimonthly.py
+
       - name: Commit and push if changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add data/patents_cumulative.csv
-          
+
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
             git commit -m "Update patents database - $(date +'%Y-%m-%d')"
             git push
-      
+
       - name: Upload CSV as artifact
         uses: actions/upload-artifact@v4
         with:
