--- a/.github/workflows/patent_search.yml
+++ b/.github/workflows/patent_search.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           EPO_OPS_KEY: ${{ secrets.EPO_OPS_KEY }}
           EPO_OPS_SECRET: ${{ secrets.EPO_OPS_SECRET }}
-        run: python Patents-Bimonthly.py   # ✅ updated path to root
+        run: python Patents-Bimonthly.py
 
       - name: Commit and push if changes
         run: |
@@ -53,3 +53,10 @@ jobs:
           name: patents-csv-${{ github.run_number }}
           path: data/patents_cumulative.csv
           retention-days: 90
+
+      - name: Send CSV by Email
+        env:
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+        run: python send_patent_email.py
