--- a/.github/workflows/patent_search.yml
+++ b/.github/workflows/patent_search.yml
@@ -1,9 +1,10 @@
 name: Patent Search and Update
 
 on:
+  workflow_dispatch:  # manual trigger
   schedule:
-    - cron: '0 0 1 */2 *'  # Every 2 months on the 1st at midnight UTC
-  workflow_dispatch:
+    # Runs at 00:00 UTC on the 1st day of every 2nd month (Feb, Apr, Jun, Aug, Oct, Dec)
+    - cron: '0 0 1 */2 *'
 
 jobs:
   search-patents:
@@ -24,6 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install epo_ops lxml pandas python-dateutil
 
       - name: List repo files for debugging
         run: ls -R
@@ -32,9 +34,12 @@ jobs:
         env:
           EPO_OPS_KEY: ${{ secrets.EPO_OPS_KEY }}
           EPO_OPS_SECRET: ${{ secrets.EPO_OPS_SECRET }}
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
         run: python Patents-Bimonthly.py
 
-      - name: Commit and push if changes
+      - name: Commit and push CSV changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
@@ -53,14 +58,3 @@ jobs:
           name: patents-csv-${{ github.run_number }}
           path: data/patents_cumulative.csv
           retention-days: 90
-
-      - name: Run patent search and email
-        env:
-          EPO_OPS_KEY: ${{ secrets.EPO_OPS_KEY }}
-          EPO_OPS_SECRET: ${{ secrets.EPO_OPS_SECRET }}
-          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
-          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
-        run: python Patents-Bimonthly.py
-
-
