--- a/.github/workflows/patent_search.yml
+++ b/.github/workflows/patent_search.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python-epo-ops-client
+          pip install python-epo-ops-client
 
       - name: List repo files for debugging
         run: ls -R
