--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ lxml>=4.9.0
 # Data processing
 pandas>=1.5.0
 openpyxl
+numpy>=1.21.0
 
 # NLP and ML
 spacy
-sentence-transformers
+sentence-transformers>=2.2.0
 scikit-learn
+torch
 
 # Stock monitoring
 yfinance
@@ -27,9 +29,9 @@ biopython
 # Search and indexing
 faiss-cpu
 
-# Deep learning
-torch
-
 # Patent monitoring (EPO OPS API)
 python-epo-ops-client>=1.3.0
 dogpile.cache>=1.1.0
+
+# AI Enhancement (Claude API)
+anthropic>=0.39.0
