--- a/.github/workflows/AI-Enhanced_Patent_Search.yml
+++ b/.github/workflows/AI-Enhanced_Patent_Search.yml
@@ -41,6 +41,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
+      # 🚨 NEW DEBUGGING STEP 🚨
+      - name: Show contents of Patents-Bimonthly.py for debugging
+        run: cat Patents-Bimonthly.py
+
       - name: Run AI-enhanced patent search
         env:
           EPO_OPS_KEY: ${{ secrets.EPO_OPS_KEY }}
