--- a/.github/workflows/Weekly-Semantic-Report.yml
+++ b/.github/workflows/Weekly-Semantic-Report.yml
@@ -35,9 +35,10 @@ jobs:
         echo "CLINICALTRIALS_INTERVENTION=${{ secrets.CLINICALTRIALS_INTERVENTION }}" >> .env
         echo "CLINICALTRIALS_CONDITION=${{ secrets.CLINICALTRIALS_CONDITION }}" >> .env
         echo "SEMANTIC_SEARCH_TERMS=${{ secrets.SEMANTIC_SEARCH_TERMS }}" >> .env
-        echo "MAX_RECORDS=50" >> .env
-        echo "DAYS_BACK_PUBMED=7" >> .env
-        echo "DAYS_BACK_TRIALS=14" >> .env
+        echo "MAX_RECORDS=100" >> .env
+        # Increased to 90 days to ensure no gaps between weekly runs
+        echo "DAYS_BACK_PUBMED=90" >> .env 
+        echo "DAYS_BACK_TRIALS=90" >> .env
         echo "SEMANTIC_THRESHOLD_PUBMED=0.45" >> .env
         echo "SEMANTIC_THRESHOLD_TRIALS=0.30" >> .env
         
